Fixed menu z-index so it's always on top

--- a/www/wp-content/themes/romaricpascal.is/scss/_header.scss
+++ b/www/wp-content/themes/romaricpascal.is/scss/_header.scss
@@ -28,6 +28,7 @@
   background-color: fade-out($rp-light, 0.1);
   @include typo-display;
   text-transform: uppercase;
+  z-index: 25;
 
   @include overlay;
   width: 80%;
